@@ -23,6 +23,7 @@ CAVEATS :
    So modifying code to use %Z instead of %z.
    Now using GMT, "date -u '+%Y-%m-%d %H:%M:%S %Z'" in order to everything work well in all cases.
  - SSH.once(Option[SSHOptions]) fix linked to Option type result not at the right place
+ - New test source file : ExternalSSHAPITest.scala => Testing the API from an external package 
  - TODO : minor problem with script when invoking jajmx.SSH... or fr.janalyse.sh.SSH... without imports...
    see helloworld script for example
  
